set h1 font-weight to bold and black overview style created but not yet used
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@12 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
@@ -12,6 +12,8 @@ h4{
 h1{
 	font-size:15px;
 	margin-bottom:10px;
+	color:#000;
+	font-weight:bold;
 }
 
 /*Titres pied de page*/
@@ -83,7 +85,7 @@ ul.menu li a:hover{
 }
 
 ul.menu li a.current{
-	background:#043;
+	background:#073737;
 	color:#FFF;
 
 	-moz-border-radius:8px;
@@ -285,6 +287,16 @@ img.icone{
 	clear:both;
 	height:0px;
 }
+
+.overview{
+	text-align:center;
+	font-style:italic;
+	padding:20px;
+	margin:10px auto;
+	font-size:18px;
+	background-color:light grey;
+}
+
 .citation{
 	text-align:justify;
 	font-style:italic;
