--- a/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
@@ -139,7 +139,7 @@ img.pict2
 	width:78px;
 	height:78px;
 	margin:0px 10px 10px 0;
-	background:#F60;
+	background:#FFF;
 }
 img.pict2{
 	margin-right:0;
