Site ENGLAIS goes live
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@104 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
@@ -312,3 +312,15 @@ img.icone{
 	margin-top:10px;
 	text-align:right;
 }
+
+.world{
+	color:#666;
+	font-size:11px;
+	text-align:center;
+}
+
+.world img{
+        margin-bottom: 0px;
+        vertical-align: middle;
+        padding-left: 3px;
+}
