drapeaux en haut à droite pour switcher de fr à en et de en à fr enlevé drapeaux en pied de page
git-svn-id: https://classicetsportautos.googlecode.com/svn/trunk@117 27e19835-539d-85bd-6db8-362e94f4f2e1

--- a/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
+++ b/ classicetsportautos --username classicetsportautos@gmail.com/css/csa.css
@@ -49,6 +49,21 @@ iframe{
 }
 /*****en tete page*****/
 
+.head {
+        position:relative;
+}
+
+.flag {
+        position:absolute;
+        right: 0px;
+        top: 8px;
+}
+
+.flag img {
+        width: 22px;
+        height: 15px;
+}
+
 .logo{
 	float:left;
 	margin-top:10px;
@@ -311,16 +326,4 @@ img.icone{
 	display:block;
 	margin-top:10px;
 	text-align:right;
-}
-
-.world{
-	color:#666;
-	font-size:11px;
-	text-align:center;
-}
-
-.world img{
-        margin-bottom: 0px;
-        vertical-align: middle;
-        padding-left: 3px;
 }
